@@ -6,6 +6,7 @@ libencloud 0.6.X:
 	  generate .revision and use it if .git does not exist (build from dist)
 	- test/sece: SECE_DISABLE_SERVICE by default, comment it to use external service
 	- config: make all prefixes public, += logPrefix
+	- http: GET params ending up in action string
 	- unix: /var/log/encloud for logs, /var/efw/encloud for storage  
 
 libencloud 0.6.2 (28/04/14):
